--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  image_picker: ^0.6.3+4
+  shared_preferences: ^0.5.6+3
+  path_provider: ^1.6.5
 
 dev_dependencies:
   flutter_test:
