--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   path_provider: ^1.6.5
   vibration: ^1.2.4
   fluttertoast: ^4.0.0
+  file_picker: ^1.5.1
+  flutter_iconpicker: ^1.1.1
+  open_file: ^3.0.1
 
 
 dev_dependencies:
