--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   file_picker: ^1.5.1
   flutter_iconpicker: ^1.1.1
   open_file: ^3.0.1
+  url_launcher: ^5.4.2
 
 
 dev_dependencies:
