--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,11 @@ dependencies:
   open_file: ^3.0.1
   url_launcher: ^5.4.2
   loading_indicator: ^1.1.0
+  firebase_core: ^0.4.4+3
+  firebase_auth: ^0.16.0
+  cloud_firestore: ^0.13.5
+  firebase_storage: ^3.1.5
+  modal_progress_hud: ^0.1.3
 
 
 dev_dependencies:
