--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,21 +23,22 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  image_picker: ^0.6.3+4
-  shared_preferences: ^0.5.6+3
-  path_provider: ^1.6.5
-  vibration: ^1.2.4
-  fluttertoast: ^4.0.0
-  file_picker: ^1.5.1
-  flutter_iconpicker: ^1.1.1
-  open_file: ^3.0.1
-  url_launcher: ^5.4.2
-  loading_indicator: ^1.1.0
-  firebase_core: ^0.4.4+3
-  firebase_auth: ^0.16.0
-  cloud_firestore: ^0.13.5
-  firebase_storage: ^3.1.5
-  modal_progress_hud: ^0.1.3
+  image_picker:
+  shared_preferences:
+  path_provider:
+  vibration:
+  fluttertoast:
+  file_picker:
+  flutter_iconpicker:
+  open_file:
+  url_launcher:
+  loading_indicator:
+  firebase_core:
+  firebase_auth:
+  cloud_firestore:
+  firebase_storage:
+  modal_progress_hud:
+
 
 
 dev_dependencies:
