--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,6 @@ dependencies:
   image_picker:
   shared_preferences:
   path_provider:
-  vibration:
   fluttertoast:
   file_picker:
   open_file:
@@ -40,6 +39,8 @@ dependencies:
   font_awesome_flutter:
   icons_helper:
   aes_crypt:
+  intro_slider:
+  firebase_admob:
 
 
 
